# moco

./: .beans.yml  .envrc  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  bacon.toml  flake.nix  justfile  manifest  qkiks0omrvuelafkbel1qpkdfja9jiil
.beads/: config.yaml  metadata.json
.flox/: env.json
.flox/env/: manifest.toml
.serena/: project.yml
.shadowenv.d/: .gitignore  010_env.lisp  020_openboserve.secret.lisp.example
cells/moco-styx/: Cargo.toml
cells/moco-tty/: Cargo.toml
cells/moco-tty/src/: error.rs  io.rs  lib.rs  process.rs
crates/moco-core/: Cargo.toml
crates/moco-core/src/: lib.rs
crates/moco-core/src/cell/: cell.rs
crates/moco-core/src/func/: func.rs  mod.rs
crates/moco-core/src/spec/: cell.rs  func.rs  mod.rs
crates/moco-internals/: Cargo.toml
crates/moco-internals/src/env/: env.rs  mod.rs  spec.rs
crates/moco-macros/: Cargo.toml
data/: .gitignore
docs/: book.toml
docs/src/: introduction.md
openspec/changes/tty-shell-process/: design.md  proposal.md  tasks.md
openspec/changes/tty-shell-process/specs/shell-io/: spec.md
openspec/changes/tty-shell-process/specs/shell-process/: spec.md
