[workspace]
members = [
    "crates/*",
    "cells/*",
]
exclude = [
]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
homepage = "https://moco.edger.dev"
repository = "https://github.com/edger-dev/moco"
authors = ["YJ Park <yjpark@gmail.com>"]

[workspace.dependencies]

# Crates
moco-internals = { path = "crates/moco-internals", version = "0.1.0-dev" }
moco-macros = { path = "crates/moco-macros", version = "0.1.0-dev" }
moco-core = { path = "crates/moco-core", version = "0.1.0-dev" }

# Cells
moco-styx = { path = "cells/moco-styx", version = "0.1.0-dev" }

# Utils
log = { version = "0.4.29", features = ["kv"] }
fastrace = "0.7.16"
rootcause = "0.11.1"
facet = "0.43.2"

# Tests
rstest = "0.26.1"
