[package]
name = "moco-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
moco-internals = { workspace = true }
moco-macros = { workspace = true }
facet = { workspace = true }
